@startuml

    class Livro{
        - id: Long
        - nome: String
        - ISBN: String
        - genero: String
        - autor: String
    }

    class Emprestimo{
        - id: Long
        - dataEmprestimoEm: DateTime
        - prazoDevolucao: DateTime
        - dataDevolucao: DateTime
    }

    class Cliente{
        - id: Long
        - nome: String
        - sobrenome: String
        - dataNascimento: Date
        - genero: String
        - endereco; String
        - CPF: string
    }

    Emprestimo "0..*"--> "1" Livro
    Emprestimo "0..*" --> "1" Cliente
@enduml
